--- a/_dist_/index.css
+++ b/_dist_/index.css
@@ -1,3 +1,31 @@
 @import "../_snowpack/pkg/tailwindcss/dist/base.css";
 @import "../_snowpack/pkg/tailwindcss/dist/components.css";
 @import "../_snowpack/pkg/tailwindcss/dist/utilities.css";
+
+:root {
+    --border-color: #1E400D;
+    --titles-color: #1D201C;
+}
+
+.text-base {
+    color: var(--titles-color);
+}
+.card {
+    border: 1px solid var(--border-color);
+}
+
+.description--container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+    padding-inline-start: 0.8rem;
+}
+
+.description--container p:nth-of-type(2) {
+    font-weight: bold;
+}
+
+.description--container p:nth-of-type(3) {
+    font-weight: lighter;
+}
